--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">    
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header_menu">
+        <ul class="menu-list header_menu-list">
+          <li class="menu-item menu-item_active">
+            <a class="menu-link">главная</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+
+      </nav>
+    </header>
+    <main>
+      <section class="cover"></section>
+      <section class="lots"></section>
+      <section class="about"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
