--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+h1<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -12,22 +12,57 @@
   <body>
     <header class="header">
       <nav class="header_menu">
-        <ul class="menu-list header_menu-list">
-          <li class="menu-item menu-item_active">
-            <a class="menu-link">главная</a>
+        <ul class="header_links-list">
+          <li class="header_links-list-item header_links-list-item_active">
+            <a class="header-link header-link_active">главная</a>
           </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#0">посмотреть лоты</a>
+          <li class="header_links-list-item">
+            <a class="header-link" href="#0">посмотреть лоты</a>
           </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#0">об аукционе</a>
+          <li class="header_links-list-item">
+            <a class="header-link" href="#0">об аукционе</a>
           </li>
         </ul>
-
       </nav>
+      <a class="header-logo">
+        <img 
+          class="header-logo-image"
+          src="/images/logo-black.svg"
+          alt="Логотип проекта"
+        >
+      </a>
+      <address class="address header_address">
+        <a class="phone" href="tel:+99995555555">+9 999 555 5555</a>
+        <br>
+        <a class="email" href="email:info@sobaka.ge">info@sobaka.ge</a>
+        <br>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
     </header>
     <main>
-      <section class="cover"></section>
+      <section class="cover">
+        <h1 class="cover_title">
+          <span class="aligned-text">
+            о<span class="letter-spacing-extended">но</span>
+          </span>
+          <span class="aligned-text aligned-text-center">
+            те<span class="letter-spacing-extended">бе</span> 
+          </span>
+          <span class="aligned-text aligned-text-right">
+            <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+          </span>          
+        </h1>
+        <div class="cover_description">
+          <h2 class="cover_description-text">
+            Аукцион вещей, в которые никто не верил
+          </h2>
+          <button class="bet_button">
+            Сделать ставку
+          </button>
+        </div>
+        <div class="overlay">
+        </div>        
+      </section>
       <section class="lots"></section>
       <section class="about"></section>
     </main>
