--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active">главная</a>
+            <a class="header__link header__link_active" href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -34,7 +34,7 @@
       <address class="address header__address">
         <a class="phone" href="tel:+99995555555">+9 999 555 5555</a>
         <br>
-        <a class="email" href="email:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
@@ -53,9 +53,9 @@
           </span>
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">
+          <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
-          </h2>
+          </p>
           <button class="bet-button">Сделать ставку</button>
         </div>
         <div class="overlay"></div>
@@ -64,7 +64,7 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a href="#" class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_film">
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
@@ -79,7 +79,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="#" class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_book">
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
@@ -98,7 +98,7 @@
           </li>
 
           <li class="lots__card-list-item">
-            <a href="#" class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_picture">
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
@@ -114,7 +114,7 @@
             </a>
           </li>
         </ul>
-        <a href="#" class="lots__look-more-link">посмотреть больше</a>
+        <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__column">
@@ -126,7 +126,7 @@
             >
           </div>
         </div>
-        <div class="about__column">
+        <article class="about__column">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
@@ -145,14 +145,14 @@
               стали культовыми.
             </p>
           </div>
-        </div>
+        </article>
       </section>
     </main>
     <footer class="footer">
       <address class="address">
         <a class="phone" href="tel:+99995555555">+9 999 555 5555</a>
         <br>
-        <a class="email" href="email:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-<br>
           265, Амстердам
@@ -161,41 +161,44 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">посмотреть лоты</a>
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">об аукционе</a>
+            <a class="footer__menu-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <ul class="footer__social-list">
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
-            <img
-              src="./images/yt.svg"
-              class="footer__social-icon"
-              alt="ссылка Ютуб"
-            >
-          </a>
-          <a class="footer__social-link" href="#">
-            <img
-              src="./images/vk.svg"
-              class="footer__social-icon"
-              alt="ссылка Вконтакте"
-            >
-          </a>
-          <a class="footer__social-link" href="#">
-            <img
-              src="./images/pinterest.svg"
-              class="footer__social-icon"
-              alt="ссылка Пинтерест"
-            >
-          </a>
-        </li>
-      </ul>
+      <nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0">
+              <img
+                src="./images/yt.svg"
+                class="footer__social-icon"
+                alt="ссылка Ютуб"
+              >
+            </a>
+            <a class="footer__social-link" href="#0">
+              <img
+                src="./images/vk.svg"
+                class="footer__social-icon"
+                alt="ссылка Вконтакте"
+              >
+            </a>
+            <a class="footer__social-link" href="#0">
+              <img
+                src="./images/pinterest.svg"
+                class="footer__social-icon"
+                alt="ссылка Пинтерест"
+              >
+            </a>
+          </li>
+        </ul>
+      </nav>
+      
     </footer>
   </body>
 </html>
