--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a class="phone" href="tel:+99995555555">+9 999 555 5555</a>
         <br>
         <a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+        <p>наб. Принсенграхт 263-<br> 265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -181,6 +181,8 @@
                 alt="ссылка Ютуб"
               >
             </a>
+          </li>
+          <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
               <img
                 src="./images/vk.svg"
@@ -188,6 +190,8 @@
                 alt="ссылка Вконтакте"
               >
             </a>
+          </li>
+          <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
               <img
                 src="./images/pinterest.svg"
