--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <nav>
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
+            <a class="footer__social-link" href="#0" target="_blank">
               <img
                 src="./images/yt.svg"
                 class="footer__social-icon"
@@ -183,7 +183,7 @@
             </a>
           </li>
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
+            <a class="footer__social-link" href="#0" target="_blank">
               <img
                 src="./images/vk.svg"
                 class="footer__social-icon"
@@ -192,7 +192,7 @@
             </a>
           </li>
           <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
+            <a class="footer__social-link" href="#0" target="_blank">
               <img
                 src="./images/pinterest.svg"
                 class="footer__social-icon"
